{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 19,
  "lineage": "2adcf2b6-a122-7934-372f-25de1618fc9a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01714724f42060db1",
            "domain": "vpc",
            "id": "eipalloc-01714724f42060db1",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-221-45-42.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.221.45.42",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "empa-elastic-ip"
            },
            "tags_all": {
              "Name": "empa-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:734921941180:internet-gateway/igw-0d31779c781105fec",
            "id": "igw-0d31779c781105fec",
            "owner_id": "734921941180",
            "tags": {
              "Name": "empa-igw"
            },
            "tags_all": {
              "Name": "empa-igw"
            },
            "vpc_id": "vpc-064fcb00dede7adf0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01714724f42060db1",
            "association_id": "eipassoc-01b0caceeaaa1d9e5",
            "connectivity_type": "public",
            "id": "nat-02be1e0a9dee08808",
            "network_interface_id": "eni-0bb3fb003166ac519",
            "private_ip": "10.0.1.152",
            "public_ip": "52.221.45.42",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00c65acbe428c565c",
            "tags": {
              "Name": "empa-nat-gw"
            },
            "tags_all": {
              "Name": "empa-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:734921941180:route-table/rtb-003594a0378120cf8",
            "id": "rtb-003594a0378120cf8",
            "owner_id": "734921941180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02be1e0a9dee08808",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "empa-private-rtb"
            },
            "tags_all": {
              "Name": "empa-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-064fcb00dede7adf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:734921941180:route-table/rtb-0f3ec369f3e0c40eb",
            "id": "rtb-0f3ec369f3e0c40eb",
            "owner_id": "734921941180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d31779c781105fec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "empa-public-rtb"
            },
            "tags_all": {
              "Name": "empa-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-064fcb00dede7adf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae4c6f0db39577da",
            "route_table_id": "rtb-003594a0378120cf8",
            "subnet_id": "subnet-09d244e8183359286"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0177ec836c2806794",
            "route_table_id": "rtb-003594a0378120cf8",
            "subnet_id": "subnet-0989b1f60d8443d40"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0194e150aafc41c02",
            "route_table_id": "rtb-003594a0378120cf8",
            "subnet_id": "subnet-09380e35e2d9aadcf"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c98c6d7e9bd917ab",
            "route_table_id": "rtb-0f3ec369f3e0c40eb",
            "subnet_id": "subnet-00c65acbe428c565c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f08445f7edf7884b",
            "route_table_id": "rtb-0f3ec369f3e0c40eb",
            "subnet_id": "subnet-0b5daed7bfdc519ef"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c14c9eb2e0dc1222",
            "route_table_id": "rtb-0f3ec369f3e0c40eb",
            "subnet_id": "subnet-0102e69a8e6035ad9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:734921941180:subnet/subnet-09d244e8183359286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d244e8183359286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "734921941180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "empa-eks-subnet-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "empa-eks-subnet-ap-southeast-1a"
            },
            "vpc_id": "vpc-064fcb00dede7adf0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:734921941180:subnet/subnet-0989b1f60d8443d40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0989b1f60d8443d40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "734921941180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "empa-eks-subnet-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "empa-eks-subnet-ap-southeast-1b"
            },
            "vpc_id": "vpc-064fcb00dede7adf0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:734921941180:subnet/subnet-09380e35e2d9aadcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09380e35e2d9aadcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "734921941180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "empa-eks-subnet-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "empa-eks-subnet-ap-southeast-1c"
            },
            "vpc_id": "vpc-064fcb00dede7adf0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:734921941180:subnet/subnet-00c65acbe428c565c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c65acbe428c565c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "734921941180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "empa-public-subnet-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "empa-public-subnet-ap-southeast-1a"
            },
            "vpc_id": "vpc-064fcb00dede7adf0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:734921941180:subnet/subnet-0b5daed7bfdc519ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5daed7bfdc519ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "734921941180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "empa-public-subnet-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "empa-public-subnet-ap-southeast-1b"
            },
            "vpc_id": "vpc-064fcb00dede7adf0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:734921941180:subnet/subnet-0102e69a8e6035ad9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0102e69a8e6035ad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "734921941180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "empa-public-subnet-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "empa-public-subnet-ap-southeast-1c"
            },
            "vpc_id": "vpc-064fcb00dede7adf0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:734921941180:vpc/vpc-064fcb00dede7adf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-079550d757f18b707",
            "default_route_table_id": "rtb-0f85016a5f41e8bff",
            "default_security_group_id": "sg-070dcc83b75445f86",
            "dhcp_options_id": "dopt-04671d9142e0b711c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-064fcb00dede7adf0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f85016a5f41e8bff",
            "owner_id": "734921941180",
            "tags": {
              "Name": "empa-vpc"
            },
            "tags_all": {
              "Name": "empa-vpc"
            }
          }
        }
      ]
    }
  ]
}